This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: 2.7 modern compiler warnings
Type: Stage: resolved
Components: Build Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson
Priority: normal Keywords: patch

Created on 2019-11-07 04:53 by benjamin.peterson, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 17075 merged benjamin.peterson, 2019-11-07 04:55
PR 17081 merged benjamin.peterson, 2019-11-07 15:14
PR 17633 merged benjamin.peterson, 2019-12-17 00:28
Messages (4)
msg356166 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2019-11-07 04:53
GCC 9's -Wstringop-truncation warnings trigger several times in 2.7. Some of these instances are all actual bugs. In all cases, we should clarify the code to make the compiler happy.
msg356191 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2019-11-07 15:06
New changeset f32bcf8c27f3681407707bbb029323eb340d3c4b by Benjamin Peterson in branch '2.7':
[2.7] bpo-38730: Fix -Wstringop-truncation warnings. (GH-17075)
https://github.com/python/cpython/commit/f32bcf8c27f3681407707bbb029323eb340d3c4b
msg356192 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2019-11-07 15:27
New changeset 9f94e52e8d38092520a3bfb1bf1ef9cbb0836584 by Benjamin Peterson in branch '2.7':
bpo-38730: Remove usage of stpncpy as it's not supported on MSVC 2008. (GH-17081)
https://github.com/python/cpython/commit/9f94e52e8d38092520a3bfb1bf1ef9cbb0836584
msg358528 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2019-12-17 00:40
New changeset 052f47ef5cc363e842e0e839980cfa55ada123b5 by Benjamin Peterson in branch '2.7':
bpo-38730: Replace strncpy in import.c with memcpy. (GH-17633)
https://github.com/python/cpython/commit/052f47ef5cc363e842e0e839980cfa55ada123b5
History
Date User Action Args
2022-04-11 14:59:22adminsetgithub: 82911
2019-12-17 00:40:03benjamin.petersonsetmessages: + msg358528
2019-12-17 00:28:35benjamin.petersonsetpull_requests: + pull_request17102
2019-11-08 03:31:29benjamin.petersonsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-11-07 15:27:12benjamin.petersonsetmessages: + msg356192
2019-11-07 15:14:52benjamin.petersonsetpull_requests: + pull_request16591
2019-11-07 15:06:35benjamin.petersonsetmessages: + msg356191
2019-11-07 04:55:21benjamin.petersonsetkeywords: + patch
stage: patch review
pull_requests: + pull_request16585
2019-11-07 04:53:19benjamin.petersoncreate