[2.7] bpo-38730: Fix -Wstringop-truncation warnings.